--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,5 +41,6 @@
         android:id="@+id/button7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="ejecutar_info"
         android:text="@string/d_adicional" />
 </LinearLayout>
